# display_codex

./: .gitignore  README.md
app/: README.md  index.html  package-lock.json  package.json
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/nsis/: installer-hooks.nsh
app/src-tauri/src/: analytics.rs  app_log.rs  codex_credentials.rs  edge_credentials.rs  lib.rs  network_diagnostics.rs  quota.rs  quota_cache.rs
app/src-tauri/tests/: analytics_fetcher.rs  codex_credentials.rs  edge_credentials.rs  network_diagnostics.rs  quota_cache.rs  quota_core.rs
