[package]
name = "codex-quota-widget"
version = "0.2.0"
description = "Windows tray widget for Codex quota remaining"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
aes-gcm = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_System_Time",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "brotli",
  "deflate",
  "gzip",
  "native-tls",
  "system-proxy"
] }
